--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,9 +1,18 @@
 ﻿/* Variables */
 :root
 {
+	/* Core */
 	--non-selected: rgb(231, 240, 247);
 	--selected: rgb(144, 238, 144);
 	--error: rgb(255, 77, 77);
+
+	/* Extra colors (for testing) */
+
+	--red: rgb(255, 77, 77);
+	--green: rgb(144, 238, 144);
+	--blue: rgb(77, 77, 255);
+	--yellow: rgb(196, 196, 47);
+	--orange: rgb(230, 130, 47);
 }
 
 /* Reset */
@@ -19,6 +28,9 @@ html, body
 	user-select: none;
 	overflow: hidden;
 	background-color: var(--non-selected);
+	
+	width: 100%;
+	height: 100%;
 }
 
 body
@@ -27,12 +39,19 @@ body
 	font-size: 130%;
 }
 
-/* Javascript helpers */
-.scrollbar-measure
+#root
 {
-	width: 100px;
-	height: 100px;
-	overflow: scroll;
-	position: absolute;
-	left: -1000%;
+	width: 100%;
+	height: 100%;
+}
+
+.scroll-hover:not(:hover)
+{
+	scrollbar-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
+	scrollbar-base-color: rgba(0, 0, 0, 0);
+}
+
+.scroll-hover:not(:hover)::-webkit-scrollbar
+{
+	opacity: 0;
 }
