--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -12,6 +12,21 @@
 
 /* Flexbox */
 
+.flex-column
+{
+    flex-direction: column;
+}
+
+.justify-content-center
+{
+    justify-content: center;
+}
+
+.align-items-center
+{
+    align-items: center;
+}
+
 .flex-1
 {
     flex: 1 1 0;
@@ -36,7 +51,7 @@
     background-color: var(--blue);
 }
 
-/* Height */
+/* Size */
 
 .mh-0
 {
@@ -46,6 +61,11 @@
 .h-100
 {
     height: 100%;
+}
+
+.w-100
+{
+    width: 100%;
 }
 
 /* Border */
