--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -36,21 +36,6 @@
     flex: 2 2 0;
 }
 
-/* Background */
-
-.bg-red
-{
-    background-color: var(--red);
-}
-.bg-green
-{
-    background-color: var(--green);
-}
-.bg-blue
-{
-    background-color: var(--blue);
-}
-
 /* Size */
 
 .mh-0
@@ -104,6 +89,11 @@
     padding-top: 0.5em;
 }
 
+.pb-0-2
+{
+    padding-bottom: 0.2em;
+}
+
 /* Overflow */
 
 .overflow-hidden
@@ -133,4 +123,11 @@
 .cursor-pointer
 {
     cursor: pointer;
+}
+
+/* Background */
+
+.bg-dark-gray
+{
+    background-color: rgb(100, 100, 100);
 }
