--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,1 +1,40 @@
 @import "./reset.css";
+
+:root
+{
+	--non-selected: rgb(231, 240, 247);
+	--selected: rgb(144, 238, 144);
+
+	--error: rgb(255, 77, 77);
+
+	--font: "Times New Roman", Times, serif;
+}
+
+/* Reset */
+
+html, body
+{
+    background-color: var(--non-selected);
+
+    width: 100%;
+	height: 100%;
+
+    overflow: hidden;
+
+	cursor: default;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	user-select: none;
+}
+
+body
+{
+	font-family: var(--font);
+	font-size: 130%;
+}
+
+#root
+{
+	width: 100%;
+	height: 100%;
+}
