--- a/src/css/index.css
+++ b/src/css/index.css
@@ -8,17 +8,23 @@
 	--font: "Times New Roman", Times, serif;
 }
 
+#root
+{
+	width: 100%;
+	height: 100%;
+}
+
 html, body
 {
     background-color: var(--non-selected);
 
     width: 100%;
 	height: 100%;
+	
+	overflow: hidden;
 
 	margin: 0;
 	padding: 0;
-
-    overflow: hidden;
 
 	cursor: default;
 	-webkit-user-select: none;
@@ -32,8 +38,9 @@ body
 	font-size: 130%;
 }
 
-#root
+/* Scrollbar */
+
+.simplebar-hover.simplebar-scrollbar::before, .simplebar-dragging > .simplebar-vertical > .simplebar-scrollbar::before
 {
-	width: 100%;
-	height: 100%;
+	background-color: #3daee9;
 }
