--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,12 +4,10 @@
 
 :root
 {
-	--non-selected: rgb(231, 240, 247);
-	--selected: rgb(144, 238, 144);
+	--not-selected: rgb(231, 240, 247);
+	--selected: rgb(113, 234, 113);
 
 	--error: rgb(255, 77, 77);
-
-	--font: "Times New Roman", Times, serif;
 }
 
 #root
@@ -20,7 +18,7 @@
 
 html, body
 {
-    background-color: var(--non-selected);
+    background-color: var(--not-selected);
 
     width: 100%;
 	height: 100%;
@@ -38,7 +36,7 @@ html, body
 
 body
 {
-	font-family: var(--font);
+	font-family: "Times New Roman", Times, serif;
 	font-size: 130%;
 }
 
