Finish first draft of the goal viewer

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -56,3 +56,11 @@ div[role="button"][aria-roledescription="draggable"]
 {
     cursor: default;
 }
+
+/* Import and Export */
+
+.hidden
+{
+	position: fixed;
+	top: -1000em;
+}
